quick fix for mobile alignment

--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -23,8 +23,7 @@
   text-overflow: ellipsis;
   font-weight: var(--font-weight-bold);
   white-space: normal;
-  // font-size: var(--font-title);
-  font-size: 2em;
+  font-size: var(--font-title);
   display: inline;
 }
 
